--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Лабораторная работа №1\n",
-    "## Выполнил студент группы ГРУППА ФИО"
+    "## Выполнил студент группы БВТ2005 Голубков Антон Юрьевич"
    ]
   },
   {
@@ -32,13 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "caring-truck",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, World!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,48 +64,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "built-contact",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "import time"
+    "import time\n",
+    "from random import randint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "alert-charm",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('0', '0', '0', '0')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "user_m = input()\n",
-    "user_n = input()\n",
-    "user_min_limit = input()\n",
-    "user_max_limit = input()\n",
-    "user_m, user_n, user_min_limit, user_max_limit"
+    "import random\n",
+    "import time\n",
+    "from random import randint\n",
+    "#user_m = input()\n",
+    "#user_n = input()\n",
+    "#user_min_limit = input()\n",
+    "#user_max_limit = input()\n",
+    "#user_m, user_n, user_min_limit, user_max_limit\n",
+    "\n",
+    "\n",
+    "def mgenerate():\n",
+    "    m=int(input())\n",
+    "    n=int(input())\n",
+    "    min_limit=int(input())\n",
+    "    max_limit=int(input())\n",
+    "    mas = [] \n",
+    "    for i in range(m): \n",
+    "        line=list()\n",
+    "        for j in range (n):\n",
+    "            line.append (randint(min_limit,max_limit))\n",
+    "        mas.append(line)\n",
+    "    return mas\n",
+    "def mprint(mas):    \n",
+    "    for i in range(0, len(mas)):\n",
+    "        for j in range(0, len(mas[i])):\n",
+    "            print(mas[i][j], end=' ')\n",
+    "        print()\n"
    ]
   },
   {
@@ -122,15 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "cleared-anniversary",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 0 ms ---\n"
+     "ename": "NameError",
+     "evalue": "name 'time' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5220/2702204570.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# Берётся срез массива, в котором минимальный элемент переносят в самый левый угол,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# после чего срез уменьшается и цикл повторяется.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;31m#TODO\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'time' is not defined"
      ]
     }
    ],
@@ -140,12 +156,24 @@
     "# после чего срез уменьшается и цикл повторяется.\n",
     "start_time = time.time()\n",
     "#TODO\n",
+    "\n",
+    "def sort1(line):\n",
+    "    for i in range(len(line)):\n",
+    "        t = line[i]\n",
+    "        for j in range(i + 1, len(line)):\n",
+    "            if line[j] < t:\n",
+    "                line[i] = line[j]\n",
+    "                line[j] = t\n",
+    "for line in M:\n",
+    "    line = sort1(line)\n",
+    "    \n",
+    "mprint(M)\n",
     "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "roman-silly",
    "metadata": {
     "scrolled": true
@@ -284,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
