--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -32,20 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "caring-truck",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Hello, World!')"
    ]
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "built-contact",
    "metadata": {},
    "outputs": [],
@@ -76,38 +68,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "alert-charm",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "1\n",
+      "9\n",
+      "\n",
+      "9 6 4 3 \n",
+      "9 8 9 4 \n",
+      "6 7 3 9 \n",
+      "1 9 8 7 \n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import time\n",
     "from random import randint\n",
-    "#user_m = input()\n",
-    "#user_n = input()\n",
-    "#user_min_limit = input()\n",
-    "#user_max_limit = input()\n",
-    "#user_m, user_n, user_min_limit, user_max_limit\n",
+    "user_m = input()\n",
+    "user_n = input()\n",
+    "user_min_limit = input()\n",
+    "user_max_limit = input()\n",
+    "user_m, user_n, user_min_limit, user_max_limit\n",
+    "print()\n",
     "\n",
     "\n",
-    "def mgenerate():\n",
-    "    m=int(input())\n",
-    "    n=int(input())\n",
-    "    min_limit=int(input())\n",
-    "    max_limit=int(input())\n",
-    "    mas = [] \n",
-    "    for i in range(m): \n",
-    "        line=list()\n",
-    "        for j in range (n):\n",
-    "            line.append (randint(min_limit,max_limit))\n",
-    "        mas.append(line)\n",
-    "    return mas\n",
-    "def mprint(mas):    \n",
-    "    for i in range(0, len(mas)):\n",
-    "        for j in range(0, len(mas[i])):\n",
-    "            print(mas[i][j], end=' ')\n",
-    "        print()\n"
+    "def mgenerate(m, n, min_l, max_l):\n",
+    "    mat = [] \n",
+    "    for i in range (int(m)): \n",
+    "        row=[]\n",
+    "        for j in range (int(n)):\n",
+    "            randNumber = random.randint(int(min_l), int(max_l))\n",
+    "            row.append (randNumber)\n",
+    "        mat.append(row)\n",
+    "    return mat\n",
+    "def mprint(mat):    \n",
+    "    for i in range(0, len(mat)):\n",
+    "        for j in range(0, len(mat[i])):\n",
+    "            print(mat[i][j], end=' ')\n",
+    "        print()\n",
+    "mat=mgenerate(user_m, user_n, user_min_limit, user_max_limit)\n",
+    "mprint(mat)"
    ]
   },
   {
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "opposed-creature",
    "metadata": {},
    "outputs": [],
@@ -134,19 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "cleared-anniversary",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5220/2702204570.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# Берётся срез массива, в котором минимальный элемент переносят в самый левый угол,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# после чего срез уменьшается и цикл повторяется.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;31m#TODO\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'time' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 6 9 \n",
+      "4 8 9 9 \n",
+      "3 6 7 9 \n",
+      "1 7 8 9 \n",
+      "--- 1 ms ---\n"
      ]
     }
    ],
@@ -155,25 +163,25 @@
     "# Берётся срез массива, в котором минимальный элемент переносят в самый левый угол,\n",
     "# после чего срез уменьшается и цикл повторяется.\n",
     "start_time = time.time()\n",
-    "#TODO\n",
-    "\n",
-    "def sort1(line):\n",
-    "    for i in range(len(line)):\n",
-    "        t = line[i]\n",
-    "        for j in range(i + 1, len(line)):\n",
-    "            if line[j] < t:\n",
-    "                line[i] = line[j]\n",
-    "                line[j] = t\n",
-    "for line in M:\n",
-    "    line = sort1(line)\n",
-    "    \n",
+    "M = copy.deepcopy(mat)\n",
+    "def sort1(row):\n",
+    "    for i in range(len(row) - 1):\n",
+    "        m = i\n",
+    "        j = i + 1\n",
+    "        while j < len(row):\n",
+    "            if row[j] < row[m]:\n",
+    "                m = j\n",
+    "            j = j + 1\n",
+    "        row[i], row[m] = row[m], row[i]\n",
+    "for row in M:\n",
+    "    row = sort1(row)\n",
     "mprint(M)\n",
     "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "roman-silly",
    "metadata": {
     "scrolled": true
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "french-czech",
    "metadata": {},
    "outputs": [
