--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "alert-charm",
    "metadata": {},
    "outputs": [
@@ -76,15 +76,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n",
+      "20\n",
+      "10\n",
       "1\n",
-      "9\n",
+      "100\n",
       "\n",
-      "9 6 4 3 \n",
-      "9 8 9 4 \n",
-      "6 7 3 9 \n",
-      "1 9 8 7 \n"
+      "18 45 20 93 96 84 82 33 92 73 \n",
+      "91 87 82 71 97 50 23 100 55 6 \n",
+      "48 44 47 17 3 80 24 34 29 29 \n",
+      "38 24 76 82 71 37 92 32 95 6 \n",
+      "38 19 11 58 30 36 80 39 32 29 \n",
+      "6 57 10 90 49 75 82 16 17 16 \n",
+      "6 54 57 18 46 75 94 30 13 30 \n",
+      "46 82 51 42 36 33 69 48 22 19 \n",
+      "86 80 19 1 44 14 9 91 80 56 \n",
+      "43 58 15 67 62 94 23 70 11 88 \n",
+      "27 33 11 47 15 95 71 29 73 10 \n",
+      "15 30 56 84 74 98 65 72 70 29 \n",
+      "79 70 79 63 58 82 34 10 3 51 \n",
+      "61 34 5 24 48 81 47 80 53 60 \n",
+      "95 10 57 75 41 14 95 32 42 6 \n",
+      "35 49 51 10 15 27 7 34 88 8 \n",
+      "69 53 50 56 8 53 23 78 18 10 \n",
+      "58 73 82 80 67 30 10 12 68 38 \n",
+      "97 7 15 34 35 28 49 84 98 23 \n",
+      "36 67 90 35 83 58 6 55 43 45 \n"
      ]
     }
    ],
@@ -132,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "opposed-creature",
    "metadata": {},
    "outputs": [],
@@ -142,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "cleared-anniversary",
    "metadata": {},
    "outputs": [
@@ -150,11 +166,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 6 9 \n",
-      "4 8 9 9 \n",
-      "3 6 7 9 \n",
-      "1 7 8 9 \n",
-      "--- 1 ms ---\n"
+      "18 20 33 45 73 82 84 92 93 96 \n",
+      "6 23 50 55 71 82 87 91 97 100 \n",
+      "3 17 24 29 29 34 44 47 48 80 \n",
+      "6 24 32 37 38 71 76 82 92 95 \n",
+      "11 19 29 30 32 36 38 39 58 80 \n",
+      "6 10 16 16 17 49 57 75 82 90 \n",
+      "6 13 18 30 30 46 54 57 75 94 \n",
+      "19 22 33 36 42 46 48 51 69 82 \n",
+      "1 9 14 19 44 56 80 80 86 91 \n",
+      "11 15 23 43 58 62 67 70 88 94 \n",
+      "10 11 15 27 29 33 47 71 73 95 \n",
+      "15 29 30 56 65 70 72 74 84 98 \n",
+      "3 10 34 51 58 63 70 79 79 82 \n",
+      "5 24 34 47 48 53 60 61 80 81 \n",
+      "6 10 14 32 41 42 57 75 95 95 \n",
+      "7 8 10 15 27 34 35 49 51 88 \n",
+      "8 10 18 23 50 53 53 56 69 78 \n",
+      "10 12 30 38 58 67 68 73 80 82 \n",
+      "7 15 23 28 34 35 49 84 97 98 \n",
+      "6 35 36 43 45 55 58 67 83 90 \n",
+      "--- 8 ms ---\n"
      ]
     }
    ],
@@ -181,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "roman-silly",
    "metadata": {
     "scrolled": true
@@ -191,14 +223,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0 ms ---\n"
+      "18 20 33 45 73 82 84 92 93 96 \n",
+      "6 23 50 55 71 82 87 91 97 100 \n",
+      "3 17 24 29 29 34 44 47 48 80 \n",
+      "6 24 32 37 38 71 76 82 92 95 \n",
+      "11 19 29 30 32 36 38 39 58 80 \n",
+      "6 10 16 16 17 49 57 75 82 90 \n",
+      "6 13 18 30 30 46 54 57 75 94 \n",
+      "19 22 33 36 42 46 48 51 69 82 \n",
+      "1 9 14 19 44 56 80 80 86 91 \n",
+      "11 15 23 43 58 62 67 70 88 94 \n",
+      "10 11 15 27 29 33 47 71 73 95 \n",
+      "15 29 30 56 65 70 72 74 84 98 \n",
+      "3 10 34 51 58 63 70 79 79 82 \n",
+      "5 24 34 47 48 53 60 61 80 81 \n",
+      "6 10 14 32 41 42 57 75 95 95 \n",
+      "7 8 10 15 27 34 35 49 51 88 \n",
+      "8 10 18 23 50 53 53 56 69 78 \n",
+      "10 12 30 38 58 67 68 73 80 82 \n",
+      "7 15 23 28 34 35 49 84 97 98 \n",
+      "6 35 36 43 45 55 58 67 83 90 \n",
+      "--- 7 ms ---\n"
      ]
     }
    ],
    "source": [
     "# Сортировка вставкой.\n",
     "start_time = time.time()\n",
-    "#TODO\n",
+    "M = copy.deepcopy(mat)\n",
+    "def sort2(row):\n",
+    "    for i in range(len(row)):\n",
+    "        cursor = row[i]\n",
+    "        pos = i\n",
+    "        while pos > 0 and row[pos - 1] > cursor:\n",
+    "            row[pos] = row[pos - 1]\n",
+    "            pos = pos - 1\n",
+    "        row[pos] = cursor\n",
+    "    return row\n",
+    "for row in M:\n",
+    "    row = sort2(row)\n",
+    "mprint(M)\n",
     "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
    ]
   },
