--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -32,12 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "caring-truck",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello, World!')"
    ]
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "built-contact",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "alert-charm",
    "metadata": {},
    "outputs": [
@@ -77,30 +85,30 @@
      "output_type": "stream",
      "text": [
       "20\n",
-      "10\n",
+      "20\n",
       "1\n",
-      "100\n",
+      "9\n",
       "\n",
-      "18 45 20 93 96 84 82 33 92 73 \n",
-      "91 87 82 71 97 50 23 100 55 6 \n",
-      "48 44 47 17 3 80 24 34 29 29 \n",
-      "38 24 76 82 71 37 92 32 95 6 \n",
-      "38 19 11 58 30 36 80 39 32 29 \n",
-      "6 57 10 90 49 75 82 16 17 16 \n",
-      "6 54 57 18 46 75 94 30 13 30 \n",
-      "46 82 51 42 36 33 69 48 22 19 \n",
-      "86 80 19 1 44 14 9 91 80 56 \n",
-      "43 58 15 67 62 94 23 70 11 88 \n",
-      "27 33 11 47 15 95 71 29 73 10 \n",
-      "15 30 56 84 74 98 65 72 70 29 \n",
-      "79 70 79 63 58 82 34 10 3 51 \n",
-      "61 34 5 24 48 81 47 80 53 60 \n",
-      "95 10 57 75 41 14 95 32 42 6 \n",
-      "35 49 51 10 15 27 7 34 88 8 \n",
-      "69 53 50 56 8 53 23 78 18 10 \n",
-      "58 73 82 80 67 30 10 12 68 38 \n",
-      "97 7 15 34 35 28 49 84 98 23 \n",
-      "36 67 90 35 83 58 6 55 43 45 \n"
+      "7 1 5 3 4 3 7 6 3 6 9 3 3 8 1 5 2 2 9 1 \n",
+      "6 5 6 7 1 1 3 9 7 7 3 3 5 3 1 7 9 8 5 2 \n",
+      "7 8 8 9 6 3 3 9 5 8 2 5 6 2 5 3 7 2 6 2 \n",
+      "1 3 9 9 9 8 8 4 4 1 2 8 6 7 9 8 5 6 2 7 \n",
+      "1 1 5 3 5 7 1 1 2 4 3 7 1 3 5 6 4 2 2 2 \n",
+      "5 9 7 5 3 3 1 2 6 2 8 5 4 7 2 5 2 6 3 9 \n",
+      "4 7 5 4 8 5 6 3 6 2 4 7 1 3 9 8 6 4 1 9 \n",
+      "2 4 5 4 1 6 7 7 2 2 5 1 7 2 6 2 4 3 3 5 \n",
+      "8 3 5 5 3 2 4 4 5 3 3 8 8 1 4 6 2 1 9 6 \n",
+      "9 8 8 4 1 4 8 5 7 8 6 4 4 5 7 2 4 7 3 7 \n",
+      "3 2 4 2 2 1 7 2 1 1 6 2 9 8 3 7 3 4 4 5 \n",
+      "5 9 8 1 6 2 5 3 2 6 5 9 2 2 4 3 7 9 1 7 \n",
+      "8 9 7 6 2 3 7 1 1 9 8 3 2 2 9 4 3 1 6 2 \n",
+      "5 3 5 5 9 2 5 9 1 7 4 4 5 1 2 1 8 7 8 8 \n",
+      "2 2 2 6 9 1 9 6 8 5 2 5 2 3 9 7 6 7 9 7 \n",
+      "3 3 6 8 2 6 1 7 3 3 1 6 3 2 6 1 3 7 9 4 \n",
+      "8 1 1 3 8 6 3 8 8 8 8 4 7 3 1 5 2 3 6 2 \n",
+      "2 8 3 9 5 7 9 9 2 4 6 7 2 7 2 8 1 4 6 3 \n",
+      "9 1 9 3 1 8 6 5 6 7 3 4 2 8 6 2 6 3 7 3 \n",
+      "8 1 3 9 3 9 8 2 1 3 4 3 8 8 7 3 9 7 3 2 \n"
      ]
     }
    ],
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "opposed-creature",
    "metadata": {},
    "outputs": [],
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "cleared-anniversary",
    "metadata": {},
    "outputs": [
@@ -166,27 +174,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 20 33 45 73 82 84 92 93 96 \n",
-      "6 23 50 55 71 82 87 91 97 100 \n",
-      "3 17 24 29 29 34 44 47 48 80 \n",
-      "6 24 32 37 38 71 76 82 92 95 \n",
-      "11 19 29 30 32 36 38 39 58 80 \n",
-      "6 10 16 16 17 49 57 75 82 90 \n",
-      "6 13 18 30 30 46 54 57 75 94 \n",
-      "19 22 33 36 42 46 48 51 69 82 \n",
-      "1 9 14 19 44 56 80 80 86 91 \n",
-      "11 15 23 43 58 62 67 70 88 94 \n",
-      "10 11 15 27 29 33 47 71 73 95 \n",
-      "15 29 30 56 65 70 72 74 84 98 \n",
-      "3 10 34 51 58 63 70 79 79 82 \n",
-      "5 24 34 47 48 53 60 61 80 81 \n",
-      "6 10 14 32 41 42 57 75 95 95 \n",
-      "7 8 10 15 27 34 35 49 51 88 \n",
-      "8 10 18 23 50 53 53 56 69 78 \n",
-      "10 12 30 38 58 67 68 73 80 82 \n",
-      "7 15 23 28 34 35 49 84 97 98 \n",
-      "6 35 36 43 45 55 58 67 83 90 \n",
-      "--- 8 ms ---\n"
+      "1 1 1 2 2 3 3 3 3 3 4 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 1 2 3 3 3 3 5 5 5 6 6 7 7 7 7 8 9 9 \n",
+      "2 2 2 2 3 3 3 5 5 5 6 6 6 7 7 8 8 8 9 9 \n",
+      "1 1 2 2 3 4 4 5 6 6 7 7 8 8 8 8 9 9 9 9 \n",
+      "1 1 1 1 1 2 2 2 2 3 3 3 4 4 5 5 5 6 7 7 \n",
+      "1 2 2 2 2 3 3 3 4 5 5 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 2 3 3 4 4 4 4 5 5 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 2 2 2 3 3 4 4 4 5 5 5 6 6 7 7 7 \n",
+      "1 1 2 2 3 3 3 3 4 4 4 5 5 5 6 6 8 8 8 9 \n",
+      "1 2 3 4 4 4 4 4 5 5 6 7 7 7 7 8 8 8 8 9 \n",
+      "1 1 1 2 2 2 2 2 3 3 3 4 4 4 5 6 7 7 8 9 \n",
+      "1 1 2 2 2 2 3 3 4 5 5 5 6 6 7 7 8 9 9 9 \n",
+      "1 1 1 2 2 2 2 3 3 3 4 6 6 7 7 8 8 9 9 9 \n",
+      "1 1 1 2 2 3 4 4 5 5 5 5 5 7 7 8 8 8 9 9 \n",
+      "1 2 2 2 2 2 3 5 5 6 6 6 7 7 7 8 9 9 9 9 \n",
+      "1 1 1 2 2 3 3 3 3 3 3 4 6 6 6 6 7 7 8 9 \n",
+      "1 1 1 2 2 3 3 3 3 4 5 6 6 7 8 8 8 8 8 8 \n",
+      "1 2 2 2 2 3 3 4 4 5 6 6 7 7 7 8 8 9 9 9 \n",
+      "1 1 2 2 3 3 3 3 4 5 6 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 3 3 3 3 3 3 4 7 7 8 8 8 8 9 9 9 \n",
+      "--- 17 ms ---\n"
      ]
     }
    ],
@@ -196,7 +204,7 @@
     "# после чего срез уменьшается и цикл повторяется.\n",
     "start_time = time.time()\n",
     "M = copy.deepcopy(mat)\n",
-    "def sort1(row):\n",
+    "def choice_sort(row):\n",
     "    for i in range(len(row) - 1):\n",
     "        m = i\n",
     "        j = i + 1\n",
@@ -206,14 +214,15 @@
     "            j = j + 1\n",
     "        row[i], row[m] = row[m], row[i]\n",
     "for row in M:\n",
-    "    row = sort1(row)\n",
+    "    row = choice_sort(row)\n",
     "mprint(M)\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "choice_sort_time = round((time.time() - start_time)*1000)\n",
+    "print(\"--- {0} ms ---\".format(choice_sort_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "roman-silly",
    "metadata": {
     "scrolled": true
@@ -223,27 +232,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 20 33 45 73 82 84 92 93 96 \n",
-      "6 23 50 55 71 82 87 91 97 100 \n",
-      "3 17 24 29 29 34 44 47 48 80 \n",
-      "6 24 32 37 38 71 76 82 92 95 \n",
-      "11 19 29 30 32 36 38 39 58 80 \n",
-      "6 10 16 16 17 49 57 75 82 90 \n",
-      "6 13 18 30 30 46 54 57 75 94 \n",
-      "19 22 33 36 42 46 48 51 69 82 \n",
-      "1 9 14 19 44 56 80 80 86 91 \n",
-      "11 15 23 43 58 62 67 70 88 94 \n",
-      "10 11 15 27 29 33 47 71 73 95 \n",
-      "15 29 30 56 65 70 72 74 84 98 \n",
-      "3 10 34 51 58 63 70 79 79 82 \n",
-      "5 24 34 47 48 53 60 61 80 81 \n",
-      "6 10 14 32 41 42 57 75 95 95 \n",
-      "7 8 10 15 27 34 35 49 51 88 \n",
-      "8 10 18 23 50 53 53 56 69 78 \n",
-      "10 12 30 38 58 67 68 73 80 82 \n",
-      "7 15 23 28 34 35 49 84 97 98 \n",
-      "6 35 36 43 45 55 58 67 83 90 \n",
-      "--- 7 ms ---\n"
+      "1 1 1 2 2 3 3 3 3 3 4 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 1 2 3 3 3 3 5 5 5 6 6 7 7 7 7 8 9 9 \n",
+      "2 2 2 2 3 3 3 5 5 5 6 6 6 7 7 8 8 8 9 9 \n",
+      "1 1 2 2 3 4 4 5 6 6 7 7 8 8 8 8 9 9 9 9 \n",
+      "1 1 1 1 1 2 2 2 2 3 3 3 4 4 5 5 5 6 7 7 \n",
+      "1 2 2 2 2 3 3 3 4 5 5 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 2 3 3 4 4 4 4 5 5 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 2 2 2 3 3 4 4 4 5 5 5 6 6 7 7 7 \n",
+      "1 1 2 2 3 3 3 3 4 4 4 5 5 5 6 6 8 8 8 9 \n",
+      "1 2 3 4 4 4 4 4 5 5 6 7 7 7 7 8 8 8 8 9 \n",
+      "1 1 1 2 2 2 2 2 3 3 3 4 4 4 5 6 7 7 8 9 \n",
+      "1 1 2 2 2 2 3 3 4 5 5 5 6 6 7 7 8 9 9 9 \n",
+      "1 1 1 2 2 2 2 3 3 3 4 6 6 7 7 8 8 9 9 9 \n",
+      "1 1 1 2 2 3 4 4 5 5 5 5 5 7 7 8 8 8 9 9 \n",
+      "1 2 2 2 2 2 3 5 5 6 6 6 7 7 7 8 9 9 9 9 \n",
+      "1 1 1 2 2 3 3 3 3 3 3 4 6 6 6 6 7 7 8 9 \n",
+      "1 1 1 2 2 3 3 3 3 4 5 6 6 7 8 8 8 8 8 8 \n",
+      "1 2 2 2 2 3 3 4 4 5 6 6 7 7 7 8 8 9 9 9 \n",
+      "1 1 2 2 3 3 3 3 4 5 6 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 3 3 3 3 3 3 4 7 7 8 8 8 8 9 9 9 \n",
+      "--- 16 ms ---\n"
      ]
     }
    ],
@@ -251,7 +260,7 @@
     "# Сортировка вставкой.\n",
     "start_time = time.time()\n",
     "M = copy.deepcopy(mat)\n",
-    "def sort2(row):\n",
+    "def insert_sort(row):\n",
     "    for i in range(len(row)):\n",
     "        cursor = row[i]\n",
     "        pos = i\n",
@@ -261,14 +270,15 @@
     "        row[pos] = cursor\n",
     "    return row\n",
     "for row in M:\n",
-    "    row = sort2(row)\n",
+    "    row = insert_sort(row)\n",
     "mprint(M)\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "insert_sort_time = round((time.time() - start_time)*1000)\n",
+    "print(\"--- {0} ms ---\".format(insert_sort_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "vital-implementation",
    "metadata": {},
    "outputs": [
@@ -276,20 +286,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0 ms ---\n"
+      "1 1 1 2 2 3 3 3 3 3 4 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 1 2 3 3 3 3 5 5 5 6 6 7 7 7 7 8 9 9 \n",
+      "2 2 2 2 3 3 3 5 5 5 6 6 6 7 7 8 8 8 9 9 \n",
+      "1 1 2 2 3 4 4 5 6 6 7 7 8 8 8 8 9 9 9 9 \n",
+      "1 1 1 1 1 2 2 2 2 3 3 3 4 4 5 5 5 6 7 7 \n",
+      "1 2 2 2 2 3 3 3 4 5 5 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 2 3 3 4 4 4 4 5 5 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 2 2 2 3 3 4 4 4 5 5 5 6 6 7 7 7 \n",
+      "1 1 2 2 3 3 3 3 4 4 4 5 5 5 6 6 8 8 8 9 \n",
+      "1 2 3 4 4 4 4 4 5 5 6 7 7 7 7 8 8 8 8 9 \n",
+      "1 1 1 2 2 2 2 2 3 3 3 4 4 4 5 6 7 7 8 9 \n",
+      "1 1 2 2 2 2 3 3 4 5 5 5 6 6 7 7 8 9 9 9 \n",
+      "1 1 1 2 2 2 2 3 3 3 4 6 6 7 7 8 8 9 9 9 \n",
+      "1 1 1 2 2 3 4 4 5 5 5 5 5 7 7 8 8 8 9 9 \n",
+      "1 2 2 2 2 2 3 5 5 6 6 6 7 7 7 8 9 9 9 9 \n",
+      "1 1 1 2 2 3 3 3 3 3 3 4 6 6 6 6 7 7 8 9 \n",
+      "1 1 1 2 2 3 3 3 3 4 5 6 6 7 8 8 8 8 8 8 \n",
+      "1 2 2 2 2 3 3 4 4 5 6 6 7 7 7 8 8 9 9 9 \n",
+      "1 1 2 2 3 3 3 3 4 5 6 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 3 3 3 3 3 3 4 7 7 8 8 8 8 9 9 9 \n",
+      "--- 16 ms ---\n"
      ]
     }
    ],
    "source": [
     "# Сортировка обменом. || Сортировка пузырьком.\n",
     "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "M = copy.deepcopy(mat)\n",
+    "def exch_sort(row):\n",
+    "    for i in range (len(row)-1):\n",
+    "        for j in range(len(row)-i-1):\n",
+    "            if row[j] > row[j+1]:\n",
+    "                row[j], row[j+1] = row[j+1], row[j]\n",
+    "    return row\n",
+    "for row in M:\n",
+    "    row = exch_sort(row)\n",
+    "mprint(M)\n",
+    "exch_sort_time = round((time.time() - start_time)*1000)\n",
+    "print(\"--- {0} ms ---\".format(exch_sort_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "veterinary-glory",
    "metadata": {},
    "outputs": [
@@ -297,20 +337,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0 ms ---\n"
+      "1 1 1 2 2 3 3 3 3 3 4 5 5 6 7 7 8 9 9 6 \n",
+      "1 1 1 2 3 3 3 3 5 5 5 6 6 7 7 7 8 9 9 7 \n",
+      "2 2 2 2 3 3 3 5 5 5 6 6 6 7 7 8 8 9 9 8 \n",
+      "1 1 2 2 3 4 4 5 6 6 7 7 8 8 8 8 9 9 9 9 \n",
+      "1 1 1 1 1 2 2 2 2 3 3 3 4 4 5 5 6 7 7 5 \n",
+      "1 2 2 2 2 3 3 3 4 5 5 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 2 3 3 4 4 4 4 5 5 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 2 2 2 3 3 4 4 4 5 5 5 6 7 7 7 6 \n",
+      "1 1 2 2 3 3 3 3 4 4 4 5 5 5 6 8 8 8 9 6 \n",
+      "1 2 3 4 4 4 4 4 5 5 6 7 7 7 7 8 8 8 9 8 \n",
+      "1 1 1 2 2 2 2 2 3 3 3 4 4 4 6 7 7 8 9 5 \n",
+      "1 1 2 2 2 2 3 3 4 5 5 5 6 6 7 8 9 9 9 7 \n",
+      "1 1 1 2 2 2 2 3 3 3 4 6 6 7 7 8 8 9 9 9 \n",
+      "1 1 1 2 2 3 4 4 5 5 5 5 5 7 7 8 8 8 9 9 \n",
+      "1 2 2 2 2 2 3 5 5 6 6 6 7 7 7 8 9 9 9 9 \n",
+      "1 1 1 2 2 3 3 3 3 3 3 4 6 6 6 7 7 8 9 6 \n",
+      "1 1 1 2 2 3 3 3 3 4 5 6 6 7 8 8 8 8 8 8 \n",
+      "1 2 2 2 2 3 3 4 4 6 6 7 7 7 8 8 9 9 9 5 \n",
+      "1 1 2 2 3 3 3 3 4 5 6 6 6 6 7 8 8 9 9 7 \n",
+      "1 1 2 2 3 3 3 3 3 3 4 7 8 8 8 8 9 9 9 7 \n",
+      "--- 166 ms ---\n"
      ]
     }
    ],
    "source": [
     "# Сортировка Шелла.\n",
     "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
+    "M = copy.deepcopy(mat)\n",
+    "def sh_sort(row):\n",
+    "    b = len(row)\n",
+    "    k = b//2\n",
+    "    while k > 0:\n",
+    "        for i in range (int(b-k)):\n",
+    "            j = i\n",
+    "            while j >= 0 and row[j] > row[int(j + k)]:\n",
+    "                h = row[j]\n",
+    "                row[j] = row[int(j+k)]\n",
+    "                row[int(j+k)] = h\n",
+    "                j = j - 1\n",
+    "        k = k / 2\n",
+    "    return row\n",
+    "for row in M:\n",
+    "    row = sh_sort(row)\n",
+    "mprint(M)\n",
+    "sh_sort_time = round((time.time() - start_time)*1000)\n",
+    "print(\"--- {0} ms ---\".format(sh_sort_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "correct-chaos",
    "metadata": {},
    "outputs": [
@@ -318,21 +395,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 1 ms ---\n"
+      "1 1 1 2 2 3 3 3 3 3 4 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 1 2 3 3 3 3 5 5 5 6 6 7 7 7 7 8 9 9 \n",
+      "2 2 2 2 3 3 3 5 5 5 6 6 6 7 7 8 8 8 9 9 \n",
+      "1 1 2 2 3 4 4 5 6 6 7 7 8 8 8 8 9 9 9 9 \n",
+      "1 1 1 1 1 2 2 2 2 3 3 3 4 4 5 5 5 6 7 7 \n",
+      "1 2 2 2 2 3 3 3 4 5 5 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 2 3 3 4 4 4 4 5 5 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 2 2 2 3 3 4 4 4 5 5 5 6 6 7 7 7 \n",
+      "1 1 2 2 3 3 3 3 4 4 4 5 5 5 6 6 8 8 8 9 \n",
+      "1 2 3 4 4 4 4 4 5 5 6 7 7 7 7 8 8 8 8 9 \n",
+      "1 1 1 2 2 2 2 2 3 3 3 4 4 4 5 6 7 7 8 9 \n",
+      "1 1 2 2 2 2 3 3 4 5 5 5 6 6 7 7 8 9 9 9 \n",
+      "1 1 1 2 2 2 2 3 3 3 4 6 6 7 7 8 8 9 9 9 \n",
+      "1 1 1 2 2 3 4 4 5 5 5 5 5 7 7 8 8 8 9 9 \n",
+      "1 2 2 2 2 2 3 5 5 6 6 6 7 7 7 8 9 9 9 9 \n",
+      "1 1 1 2 2 3 3 3 3 3 3 4 6 6 6 6 7 7 8 9 \n",
+      "1 1 1 2 2 3 3 3 3 4 5 6 6 7 8 8 8 8 8 8 \n",
+      "1 2 2 2 2 3 3 4 4 5 6 6 7 7 7 8 8 9 9 9 \n",
+      "1 1 2 2 3 3 3 3 4 5 6 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 3 3 3 3 3 3 4 7 7 8 8 8 8 9 9 9 \n",
+      "--- 16 ms ---\n"
      ]
     }
    ],
    "source": [
     "# Быстрая сортировка.\n",
     "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))\n",
+    "def qsort(row):\n",
+    "    if len(row)<=1:\n",
+    "        return row\n",
+    "    q=row[0]\n",
+    "    l=[]\n",
+    "    c=[]\n",
+    "    r=[]\n",
+    "    for i in range (len(row)):\n",
+    "        if row[i]<q:\n",
+    "            l.append(row[i])\n",
+    "        if row[i]==q:\n",
+    "            c.append(row[i])\n",
+    "        if row[i]>q:\n",
+    "            r.append(row[i])\n",
+    "    return qsort(l) + c + qsort(r)\n",
+    "M = copy.deepcopy(mat)\n",
+    "M1 = []\n",
+    "for row in M:\n",
+    "    M1.append(qsort(row))\n",
+    "mprint(M1)\n",
+    "qsort_time = round((time.time() - start_time)*1000)\n",
+    "print(\"--- {0} ms ---\".format(qsort_time))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "french-czech",
    "metadata": {},
    "outputs": [
@@ -340,29 +457,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0 ms ---\n"
+      "1 1 1 2 2 3 3 3 3 3 4 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 1 2 3 3 3 3 5 5 5 6 6 7 7 7 7 8 9 9 \n",
+      "2 2 2 2 3 3 3 5 5 5 6 6 6 7 7 8 8 8 9 9 \n",
+      "1 1 2 2 3 4 4 5 6 6 7 7 8 8 8 8 9 9 9 9 \n",
+      "1 1 1 1 1 2 2 2 2 3 3 3 4 4 5 5 5 6 7 7 \n",
+      "1 2 2 2 2 3 3 3 4 5 5 5 5 6 6 7 7 8 9 9 \n",
+      "1 1 2 3 3 4 4 4 4 5 5 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 2 2 2 3 3 4 4 4 5 5 5 6 6 7 7 7 \n",
+      "1 1 2 2 3 3 3 3 4 4 4 5 5 5 6 6 8 8 8 9 \n",
+      "1 2 3 4 4 4 4 4 5 5 6 7 7 7 7 8 8 8 8 9 \n",
+      "1 1 1 2 2 2 2 2 3 3 3 4 4 4 5 6 7 7 8 9 \n",
+      "1 1 2 2 2 2 3 3 4 5 5 5 6 6 7 7 8 9 9 9 \n",
+      "1 1 1 2 2 2 2 3 3 3 4 6 6 7 7 8 8 9 9 9 \n",
+      "1 1 1 2 2 3 4 4 5 5 5 5 5 7 7 8 8 8 9 9 \n",
+      "1 2 2 2 2 2 3 5 5 6 6 6 7 7 7 8 9 9 9 9 \n",
+      "1 1 1 2 2 3 3 3 3 3 3 4 6 6 6 6 7 7 8 9 \n",
+      "1 1 1 2 2 3 3 3 3 4 5 6 6 7 8 8 8 8 8 8 \n",
+      "1 2 2 2 2 3 3 4 4 5 6 6 7 7 7 8 8 9 9 9 \n",
+      "1 1 2 2 3 3 3 3 4 5 6 6 6 6 7 7 8 8 9 9 \n",
+      "1 1 2 2 3 3 3 3 3 3 4 7 7 8 8 8 8 9 9 9 \n",
+      "--- 25 ms ---\n"
      ]
     }
    ],
    "source": [
     "# Турнирная сортировка.\n",
     "start_time = time.time()\n",
-    "#TODO\n",
-    "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "rental-jerusalem",
-   "metadata": {},
-   "source": [
+    "import heapq\n",
+    "M = copy.deepcopy(mat)\n",
+    "def tsort(row, hsize):\n",
+    "    heap = []\n",
+    "    if len(row) >= hsize:\n",
+    "        heap = row[:hsize]\n",
+    "    else:\n",
+    "        heap = row[:]\n",
+    "    heapq.heapify(heap)\n",
+    "    \n",
+    "    win = [float('-inf')]\n",
+    "    los = []\n",
+    "    i = hsize\n",
+    "    while i < len(row) or len(heap) > 0:\n",
+    "        top = heapq.heappop(heap)\n",
+    "        if top >= win[-1]:\n",
+    "            win.append(top)\n",
+    "        else:\n",
+    "            los.append(top)\n",
+    "            \n",
+    "        if i < len(row):\n",
+    "            heapq.heappush(heap, row[i])\n",
+    "        i += 1\n",
+    "        \n",
+    "    del win[0]\n",
+    "    row.clear()\n",
+    "    row.extend(los)\n",
+    "    row.extend(win)\n",
+    "    \n",
+    "    if len(los) > 0:\n",
+    "        tsort(row, hsize)\n",
+    "        \n",
+    "for i in range(len(M)):\n",
+    "        tsort(M[i], 10)\n",
+    "mprint(M)\n",
+    "\n",
+    "tsort_time = round((time.time() - start_time)*1000)\n",
+    "print(\"--- {0} ms ---\".format(tsort_time))\n",
+    "\n",
     "### Вывод\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "19e7f6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 место: .sort() - 0 ms\n",
+      "2 место: bubble sort - 16 ms\n",
+      "3 место: insertion sort - 16 ms\n",
+      "4 место: quick sort - 16 ms\n",
+      "5 место: selection sort - 17 ms\n",
+      "6 место: tournament sort - 25 ms\n",
+      "7 место: shell sort - 166 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = copy.deepcopy(mat)\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for i in range(len(M)):\n",
+    "    M[i].sort()\n",
+    "default_sort_time = round((time.time() - start_time)*1000)\n",
+    "\n",
+    "sort_list = [[choice_sort_time, \"selection sort\"],\n",
+    "             [insert_sort_time, \"insertion sort\"],\n",
+    "             [exch_sort_time, \"bubble sort\"],\n",
+    "             [sh_sort_time, \"shell sort\"],\n",
+    "             [qsort_time, \"quick sort\"],\n",
+    "             [tsort_time, \"tournament sort\"],\n",
+    "             [default_sort_time, \".sort()\"]]\n",
+    "\n",
+    "sort_list.sort()\n",
+    "\n",
+    "for i in range(len(sort_list)):\n",
+    "    print(f\"{i + 1} место: {sort_list[i][1]} - {sort_list[i][0]} ms\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b53be17",
    "metadata": {},
    "outputs": [],
    "source": []
